Minor CSS fixes - decided not to fix/float actions as it breaks modal UX, and fixed a bug where content would overlap exposed filters.

--- a/css/file_browser.view.css
+++ b/css/file_browser.view.css
@@ -84,17 +84,6 @@ input[type="submit"][name="filter"] {
   margin-top: 30px;
 }
 
-/* Float submit button over browser. */
-.file-browser-actions {
-  position: absolute;
-  bottom: 0;
-  background: white;
-  height: 30px;
-  width: 100%;
-  padding: 10px 0 10px 0;
-  z-index: 100;
-}
-
 .layout-container {
   margin: 0;
 }
